[gd_scene load_steps=4 format=3 uid="uid://bvvuh1tlyahup"]

[ext_resource type="Script" path="res://mode_scoreAttack.gd" id="1_q63rt"]
[ext_resource type="Theme" uid="uid://dcxfejhbbj3pi" path="res://Themes/displays_theme.tres" id="2_0yjpv"]
[ext_resource type="Texture2D" uid="uid://bfk3cy4j5p5yy" path="res://Assets/Graphics/scoreDisplay_1.png" id="2_4wv6g"]

[node name="mode_scoreAttack" type="CharacterBody2D"]
z_index = 100
script = ExtResource("1_q63rt")

[node name="scoreAttack_penaltyMultiplier" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="scoreAttack_timeLeft_reduction" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = -136.0
offset_top = -112.0
offset_right = 113.0
offset_bottom = -48.0
texture = ExtResource("2_4wv6g")
expand_mode = 1

[node name="scoreAttack_timeLeft_display" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -124.0
offset_top = -96.0
offset_right = 132.0
theme = ExtResource("2_0yjpv")
theme_override_font_sizes/font_size = 27
text = "test"

[node name="scoreAttack_penaltyMultiplier_display" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 0.45098, 0.12549, 1)
offset_left = -112.0
offset_top = -48.0
offset_right = 144.0
offset_bottom = 48.0
theme = ExtResource("2_0yjpv")
theme_override_font_sizes/font_size = 20
text = "x1"

[connection signal="timeout" from="scoreAttack_penaltyMultiplier" to="." method="_on_score_attack_penalty_multiplier_timeout"]
[connection signal="timeout" from="scoreAttack_timeLeft_reduction" to="." method="_on_score_attack_time_left_reduction_timeout"]
